@@ -2,13 +2,35 @@ import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
 
 plugins {
-    `maven-publish`
-    id("io.papermc.paperweight.patcher") version "2.0.0-beta.19"
+    java
+    id("io.papermc.paperweight.patcher") version "2.0.0-beta.21"
 }
 
 val paperMavenPublicUrl = "https://repo.papermc.io/repository/maven-public/"
-val leafMavenPublicUrl = "https://maven.leafmc.one/snapshots/"
 val keilaMavenPublishUrl = providers.environmentVariable("KEILA_MAVEN_URL").orElse("https://maven.tame.gg/snapshots/")
+
+paperweight {
+    upstreams.paper {
+        ref = providers.gradleProperty("paperCommit")
+
+        patchFile {
+            path = "paper-server/build.gradle.kts"
+            outputFile = file("purpur-server/build.gradle.kts")
+            patchFile = file("purpur-server/build.gradle.kts.patch")
+        }
+        patchFile {
+            path = "paper-api/build.gradle.kts"
+            outputFile = file("purpur-api/build.gradle.kts")
+            patchFile = file("purpur-api/build.gradle.kts.patch")
+        }
+        patchDir("paperApi") {
+            upstreamPath = "paper-api"
+            excludes = setOf("build.gradle.kts")
+            patchesDir = file("purpur-api/paper-patches")
+            outputDir = file("paper-api")
+        }
+    }
+}
 
 subprojects {
     apply(plugin = "java-library")
@@ -16,21 +38,15 @@ subprojects {
 
     extensions.configure<JavaPluginExtension> {
         toolchain {
-            languageVersion = JavaLanguageVersion.of(21)
+            languageVersion = JavaLanguageVersion.of(25)
         }
-    }
-
-    repositories {
-        mavenCentral()
-        maven(paperMavenPublicUrl)
-        maven(leafMavenPublicUrl)
     }
 
     tasks.withType<JavaCompile>().configureEach {
         options.encoding = Charsets.UTF_8.name()
-        options.release = 21
+        options.release = 25
         options.isFork = true
-        options.compilerArgs.addAll(listOf("-Xlint:-deprecation", "-Xlint:-removal", "--enable-preview"))
+        options.compilerArgs.addAll(listOf("-Xlint:-deprecation", "-Xlint:-removal"))
     }
     tasks.withType<Javadoc>().configureEach {
         options.encoding = Charsets.UTF_8.name()
@@ -39,12 +55,17 @@ subprojects {
         filteringCharset = Charsets.UTF_8.name()
     }
     tasks.withType<Test>().configureEach {
-        jvmArgs("--enable-preview")
         testLogging {
             showStackTraces = true
             exceptionFormat = TestExceptionFormat.FULL
             events(TestLogEvent.STANDARD_OUT)
         }
+    }
+
+    repositories {
+        mavenCentral()
+        maven(paperMavenPublicUrl)
+        maven("https://jitpack.io")
     }
 
     extensions.configure<PublishingExtension> {
@@ -59,25 +80,14 @@ subprojects {
     }
 }
 
-paperweight {
-    upstreams.paper {
-        ref = providers.gradleProperty("paperCommit")
+tasks.register("printMinecraftVersion") {
+    doLast {
+        println(providers.gradleProperty("mcVersion").get().trim())
+    }
+}
 
-        patchFile {
-            path = "paper-server/build.gradle.kts"
-            outputFile = file("leaf-server/build.gradle.kts")
-            patchFile = file("leaf-server/build.gradle.kts.patch")
-        }
-        patchFile {
-            path = "paper-api/build.gradle.kts"
-            outputFile = file("leaf-api/build.gradle.kts")
-            patchFile = file("leaf-api/build.gradle.kts.patch")
-        }
-        patchDir("paperApi") {
-            upstreamPath = "paper-api"
-            excludes = setOf("build.gradle.kts")
-            patchesDir = file("leaf-api/paper-patches")
-            outputDir = file("paper-api")
-        }
+tasks.register("printKeilaVersion") {
+    doLast {
+        println(project.version)
     }
 }
